data/derived/fa15/progs/unify/prog0557.ml.out
Characters 70-89:
  | h::t -> catLists t ((lastListElement x) :: y);;
                        ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
